fix video intro on mobile

--- a/src/components/molecules/navbar/Navbar.scss
+++ b/src/components/molecules/navbar/Navbar.scss
@@ -46,7 +46,7 @@
 .nav-mobile {
   position: absolute;
   width: 100%;
-  top: 74px;
+  top: 69px;
   left: 0;
   display: flex;
   z-index: 10;
